# Aerolineas-Rusticas-Rust

./: .dockerignore  .env  .gitignore  Cargo.toml  ComandosPresentacion.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
tp_aerolineas/: Cargo.toml  supervisor.config
tp_aerolineas/nodos/nodo8080/: server.key
tp_aerolineas/nodos/nodo8081/: openssl.cnf
tp_aerolineas/nodos/nodo8087/: server.crt
tp_aerolineas/src/: aeropuerto.rs  aeropuertos_initialize.json  auth_challenge.rs  avion.rs  aviones_initialize.json  cliente.rs  ejecutor.rs  error.rs  error_codes.rs  hashear_contrasenas_archivo.rs  lib.rs  main.rs  message.rs  nodo_cassandra.rs  nodos_initialize.json  parser.rs  postfija.rs  servidor.rs  ui_grafica.rs
tp_aerolineas/src/message_functions/: body.rs  body_auth_response.rs  body_auth_token_maybe_empty.rs  body_authenticate.rs  body_execute.rs  body_prepare.rs  body_prepared_result.rs  body_query.rs  body_rows.rs  body_set_keyspace.rs  body_startup.rs  body_void.rs  change_type.rs  column_spec.rs  consistency.rs  metadata.rs  mod.rs  query_parameters.rs  query_value.rs  row_content.rs  shema_change.rs  string_map.rs  target.rs  value.rs
tp_aerolineas/src/nodo_cassandra_functions/: keyspace.rs  mod.rs  primary_key.rs  replication_class.rs  replication_config.rs  table.rs
tp_aerolineas/src/parser_functions/: adapt.rs  condicion_compuesta.rs  consistency.rs  create_keyspace_query.rs  elemento_condicion_pila.rs  mod.rs  operator.rs  query_create_table.rs  query_delete.rs  query_insert.rs  query_select.rs  query_update.rs  simple_condition.rs
(+20 files in other folders)
