[package]
name = "tp_aerolineas"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# [[bin]]
# name = "servidor"
# path = "src/servidor.rs"

# [[bin]]
# name = "ui"
# path = "src/ui_grafica.rs"

[dependencies]
byteorder = "1.4.3"
scram = "0.6.0"
sasl = "*"
eframe = "0.22.0"
egui =  "0.22.0"
image = "0.23"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
chrono = "0.4"
rustls = "0.20"
rustls-native-certs = "0.6"
rustls-pemfile = "1.0"
pem = "1.0"
bcrypt = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
log = "0.4"
flexi_logger = "0.22"